<resources>
    <string name="app_name">DashCam</string>
    <string name="record">nahrávání</string>
    <string name="settings">Settings</string>
    <string name="about">o aplikaci</string>

    <string name="take_picture">Take picture</string>


    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This application can not function without permission for storage access and camera and audio recording. Please accept permissions.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="intro_message">
        <![CDATA[


            This sample demonstrates how to record video using Camera2 API.


        ]]>
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_units_title">Speed units</string>
    <string-array name="pref_units_list_titles">
        <item>Kilometers per hour</item>
        <item>Miles per hour</item>
    </string-array>
    <string-array name="pref_units_list_values">
        <item>kph</item>
        <item>mph</item>
    </string-array>

    <string name="pref_duration_title">Duration</string>
    <string-array name="pref_duration_list_titles">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <string-array name="pref_duration_list_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
    </string-array>

    <string name="pref_quality_title">Quality</string>
    <string-array name="pref_quality_list_titles">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <string-array name="pref_quality_list_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>


    <string name="pref_fps_title">Frame rate</string>
    <string-array name="pref_fps_list_titles">
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>
    <string-array name="pref_fps_list_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <string name="pref_resolution_title">Resolution</string>
    <string-array name="pref_resolution_list_titles">
        <item>FullHD</item>
        <item>HD</item>
    </string-array>
    <string-array name="pref_resolution_list_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recorded_videos">Recorded videos</string>
    <string name="delete">Delete</string>
    <string name="ok">YES</string>
    <string name="delete_dialog_message">Are you sure you want to delete this video?</string>
    <string name="delete_dialog_title">Delete video</string>
    <string name="no">NO</string>
    <string name="delete_all">Delete all videos</string>
    <string name="delete_selected">Delete selected videos</string>
    <string name="open_dir">Open directory</string>
    <string name="delete_all_message">Are you sure you want to delete all recorded videos?</string>
    <string name="delete_selected_message">Are you sure you want to delete selected videos?</string>
    <string name="search">Search</string>
    <string name="no_videos">No videos found</string>
    <string name="displaying_res">Displaying results for</string>
    <string name="video">Video</string>
    <string name="minutes">minutes</string>
    <string name="image_not_found">Map image not available</string>
    <string name="date">Date</string>
    <string name="trip_duration">Trip duration</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="play_video">Play video</string>
    <string name="about_dashcam">About DashCam</string>
    <string name="about_app">
        DashCam is an application that allows you to record everything that happens in front of you on the road.\n\nYou never know what happens on the road, so it is always smart to have a black box.\n\nRecording is limited to a certain duration (you can change the duration in Settings), so do not forget to save the recording if any worth-saving moment occurs.\n\n\nDeveloped by Jakub Minařík.
    </string>
    <string name="contact_dev">Contact developer</string>
    <string name="cancel">Cancel</string>
    <string name="choose_action">Select action</string>
    <string name="play">Play</string>
    <string name="share">Share</string>
    <string name="details">Details</string>
    <string name="edit">Edit</string>
    <string name="edit_name">Edit name</string>
    <string name="save">Save</string>
    <string name="smart_features">Smart features</string>
    <string name="settings_automatic_start">settingsAutomaticStart</string>
    <string name="auto_start">Auto on/off</string>
    <string name="auto_on_off_summary">Start/stop recording automatically when motion is detected</string>
    <string name="duration_summary">Minimum guaranteed video duration after saving.</string>
    <string name="use_map_summary">Show and record trips on map</string>
    <string name="use_map">Use map</string>
</resources>
