<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/pref_header_general">


        <ListPreference xmlns:android="http://schemas.android.com/apk/res/android"
            android:defaultValue="kph"
            android:entries="@array/pref_units_list_titles"
            android:entryValues="@array/pref_units_list_values"
            android:key="units"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="%s"
            android:title="@string/pref_units_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/video">

        <ListPreference xmlns:android="http://schemas.android.com/apk/res/android"
            android:defaultValue="10"
            android:entries="@array/pref_duration_list_titles"
            android:entryValues="@array/pref_duration_list_values"
            android:key="duration"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="@string/duration_summary"
            android:title="@string/pref_duration_title" />


        <ListPreference xmlns:android="http://schemas.android.com/apk/res/android"
            android:defaultValue="2"
            android:entries="@array/pref_quality_list_titles"
            android:entryValues="@array/pref_quality_list_values"
            android:key="quality"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="%s"
            android:title="@string/pref_quality_title" />

        <ListPreference xmlns:android="http://schemas.android.com/apk/res/android"
            android:defaultValue="30"
            android:entries="@array/pref_fps_list_titles"
            android:entryValues="@array/pref_fps_list_values"
            android:key="frameRate"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="%s"
            android:title="@string/pref_fps_title" />

        <ListPreference xmlns:android="http://schemas.android.com/apk/res/android"
            android:defaultValue="1"
            android:entries="@array/pref_resolution_list_titles"
            android:entryValues="@array/pref_resolution_list_values"
            android:key="resolution"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="%s"
            android:title="@string/pref_resolution_title" />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/smart_features">

        <SwitchPreference
            android:title="@string/use_map"
            android:key="useMap"
            android:summary="@string/use_map_summary"
            android:icon="@drawable/ic_map_white_24dp"
            android:defaultValue="true"/>

        <SwitchPreference
            android:title="@string/auto_start"
            android:key="autoOnOff"
            android:summary="@string/auto_on_off_summary"
            android:icon="@drawable/ic_motion"
            android:defaultValue="true"/>

    </PreferenceCategory>

</PreferenceScreen>