<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/recordButton"
                android:layout_height="wrap_content"
                style="@style/button"
                android:text="@string/record"
                />

            <Button
                android:id="@+id/playButton"
                android:layout_height="wrap_content"
                style="@style/button"
                android:text="@string/play" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/settingsButton"
                android:layout_height="wrap_content"
                style="@style/button"
                android:text="@string/settings" />

            <Button
                android:id="@+id/aboutButton"
                android:layout_height="wrap_content"
                style="@style/button"
                android:text="@string/about" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>